--- a/index.css
+++ b/index.css
@@ -1,48 +1,44 @@
-/*----------------------*/
-/*--------RESET---------*/
-/*----------------------*/
+/* ------------------- */
+/* Custom properties   */
+/* ------------------- */
 
-/*----------------------*/
-/*Custom Properties*/
-/*----------------------*/
 :root {
-  ---clr-dark: 230 35% 7%;
-  ---clr-light: 231 77% 90%;
-  ---clr-white: 0 0% 100%;
-
-    /* font-sizes */
-    --fs-900: 9.375rem;
-    --fs-800: 6.25rem;
-    --fs-700: 3.5rem;
-    --fs-600: 2rem;
-    --fs-500: 1.75rem;
-    --fs-400: 1.125rem;
-    --fs-300: 1rem;
-    --fs-200: 0.875rem;
-    
-    /* font-families */
-    --ff-serif: "Bellefair", serif;
-    --ff-sans-cond: "Barlow Condensed", sans-serif;
-    --ff-sans-normal: "Barlow", sans-serif;
+  /* colors */
+  --clr-dark: 230 35% 7%;
+  --clr-light: 231 77% 90%;
+  --clr-white: 0 0% 100%;
+  
+  /* font-sizes */
+  --fs-900: 9.375rem;
+  --fs-800: 6.25rem;
+  --fs-700: 3.5rem;
+  --fs-600: 2rem;
+  --fs-500: 1.75rem;
+  --fs-400: 1.125rem;
+  --fs-300: 1rem;
+  --fs-200: 0.875rem;
+  
+  /* font-families */
+  --ff-serif: "Bellefair", serif;
+  --ff-sans-cond: "Barlow Condensed", sans-serif;
+  --ff-sans-normal: "Barlow", sans-serif;
 }
 
 
-/*General*/
+/* ------------------- */
+/* Reset               */
+/* ------------------- */
 
-.flow > *:where(:not(:first-child)) {
-  margin-top: var(--flow-space, 1rem);
-  /*outline: 1px solid red;*/
-}
+/* https://piccalil.li/blog/a-modern-css-reset/ */
 
-/* Box Sizing */
+/* Box sizing */
 *,
-*::Before,
-*::After {
-
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
-/* Reset Margins */
+/* Reset margins */
 body,
 h1,
 h2,
@@ -52,7 +48,7 @@ h5,
 p,
 figure,
 picture {
-  margin: 0;
+  margin: 0; 
 }
 
 h1,
@@ -62,110 +58,94 @@ h4,
 h5,
 h6,
 p {
-    font-weight: 400;
+  font-weight: 400;
 }
 
-
-/* Set Up Body*/
+/* set up the body */
 body {
   font-family: var(--ff-sans-normal);
   font-size: var(--fs-400);
-  color: hsl(var(---clr-white));
-  background-color: hsl(var(---clr-dark));
+  color: hsl( var(--clr-white) );
+  background-color: hsl( var(--clr-dark) );
   line-height: 1.5;
   min-height: 100vh;
 }
 
-/* Make Images Easier To Work With */
+/* make images easier to work with */
 img,
-picture {
+picutre {
   max-width: 100%;
   display: block;
 }
 
-/* Make Forms Easier*/
+/* make form elements easier to work with */
 input,
 button,
 textarea,
 select {
   font: inherit;
-
 }
 
-/*Remove Animations For People Who Turned Them Off */
+/* remove animations for people who've turned them off */
 @media (prefers-reduced-motion: reduce) {  
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
+*,
+*::before,
+*::after {
+  animation-duration: 0.01ms !important;
+  animation-iteration-count: 1 !important;
+  transition-duration: 0.01ms !important;
+  scroll-behavior: auto !important;
+}
 }
 
-/*-------------------------*/
-/*Utility Classes*/
-/*-------------------------*/
+
+/* ------------------- */
+/* Utility classes     */
+/* ------------------- */
+
+/* general */
 
 .flex {
   display: flex;
-  gap: var(--gap, 1rem)
+  gap: var(--gap, 1rem);
 }
 
 .grid {
   display: grid;
-  gap: var(--gap, 1rem)
+  gap: var(--gap, 1rem);
+}
+
+.flow > *:where(:not(:first-child)) {
+  margin-top: var(--flow-space, 1rem);
 }
 
 .container {
   padding-inline: 2em;
   margin-inline: auto;
-  max-width: 90rem;
+  max-width: 80rem;
 }
 
-/*For Assisted Users (Sighted Readers)*/
 .sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap; /* added line */
-  border: 0;
+position: absolute; 
+width: 1px;
+height: 1px;
+padding: 0;
+margin: -1px; 
+overflow: hidden;
+clip: rect(0, 0, 0, 0);
+white-space: nowrap; /* added line */
+border: 0;
 }
 
-/* Colors */
-.bg-dark {
-  background-color: hsl(var(---clr-dark));
-}
+/* colors */
 
-.bg-accent {
-  background-color: hsl(var(---clr-light));
-}
+.bg-dark { background-color: hsl( var(--clr-dark) );}
+.bg-accent { background-color: hsl( var(--clr-light) );}
+.bg-white { background-color: hsl( var(--clr-white) );}
 
-.bg-white {
-  background-color: hsl(var(---clr-white));
-}
-
-.text-dark {
-  color: hsl(var(---clr-dark));
-}
-
-.text-accent {
-  color: hsl(var(---clr-light));
-}
-
-.text-white {
-  color: hsl(var(---clr-white));
-}
-
-.color-container {
-  flex-grow: 1;
-  padding-right: .5rem;
-}
+.text-dark { color: hsl( var(--clr-dark) );}
+.text-accent { color: hsl( var(--clr-light) );}
+.text-white { color: hsl( var(--clr-white) );}
 
 /* typography */
 
@@ -188,57 +168,58 @@ select {
 .fs-300 { font-size: var(--fs-300); }
 .fs-200 { font-size: var(--fs-200); }
 
-
 .fs-900,
 .fs-800,
 .fs-700,
 .fs-600 {
-    line-height: 1.1;
+  line-height: 1.1;
 }
 
 .numbered-title {
+  font-family: var(--ff-sans-cond);
   font-size: var(--fs-500);
   text-transform: uppercase;
-  font-family: var(--ff-sans-cond);
-  letter-spacing: 4.72px;
+  letter-spacing: 4.72px; 
 }
+
 .numbered-title span {
   margin-right: .5em;
   font-weight: 700;
-  color: hsl(var(---clr-white) / .25)
+  color: hsl( var(--clr-white) / .25);
 }
 
-/*----------------------*/
-/*Components*/
-/*----------------------*/
+
+/* ------------------- */
+/* Compontents         */
+/* ------------------- */
 
 .large-button {
   position: relative;
+  z-index: 1;
   display: grid;
   place-items: center;
   padding: 0 2em;
   border-radius: 50%;
   aspect-ratio: 1;
   text-decoration: none;
-  z-index: 1;
 }
 
 .large-button::after {
   content: '';
   position: absolute;
   z-index: -1;
-  background-color: hsl(var(---clr-light) / .15);
   width: 100%;
   height: 100%;
+  background: hsl( var(--clr-white) / .1);
   border-radius: 50%;
   opacity: 0;
-  transition: opacity 599ms linear, transform 750ms ease-in-out;
+  transition: opacity 500ms linear, transform 750ms ease-in-out;
 }
 
 .large-button:hover::after,
 .large-button:focus::after {
-  transform: scale(1.5);
   opacity: 1;
+  transform: scale(1.5);
 }
 
 .primary-navigation {
@@ -259,39 +240,40 @@ select {
 }
 
 .underline-indicators > * {
+  cursor: pointer;
   padding: var(--underline-gap, 1rem) 0;
   border: 0;
-  border-bottom: .2rem solid hsl(var(---clr-white) / 0 );
+  border-bottom: .2rem solid hsl( var(--clr-white) / 0 );
 }
 
 .underline-indicators > *:hover,
 .underline-indicators > *:focus {
-  border-color: hsl(var(---clr-white) / .5);
+  border-color: hsl( var(--clr-white) / .5);
 }
 
 .underline-indicators > .active,
 .underline-indicators > [aria-selected="true"] {
-    color: hsl( var(--clr-white) / 1);
-    border-color: hsl( var(--clr-white) / 1);
+  color: hsl( var(--clr-white) / 1);
+  border-color: hsl( var(--clr-white) / 1); 
 }
 
 .tab-list {
-  --gap: 2rem
+  --gap: 2rem;
 }
 
 .dot-indicators > * {
   cursor: pointer;
   border: 0;
   border-radius: 50%;
-  padding: .5rem;
-  aspect-ratio: 1;
+  padding: .5em;
+  background-color: hsl( var(--clr-white) / .25);
 }
 
 .dot-indicators > *:hover,
-.dot-indicators > *:focus {
-    background-color: hsl( var(--clr-white) / .5);
+.dot-indicators > *:focus { 
+  background-color: hsl( var(--clr-white) / .5);
 }
 
 .dot-indicators > [aria-selected="true"] {
-    background-color: hsl( var(--clr-white) / 1); 
+  background-color: hsl( var(--clr-white) / 1); 
 }
