--- a/index.css
+++ b/index.css
@@ -91,6 +91,9 @@ body {
   
   display: grid;
   grid-template-rows: min-content 1fr;
+
+  
+  overflow-x: hidden;
 }
 
 /* make images easier to work with */
@@ -153,7 +156,6 @@ select {
 
 .grid-container {
   text-align: center;
-  border: 5px solid limegreen;
   display: grid;
   place-items: center;
   padding-inline: 1rem;
@@ -283,6 +285,43 @@ border: 0;
   opacity: 1;
   transform: scale(1.5);
 }
+/*Primary Navigation */
+
+.logo {
+  margin: 2rem clamp(1.5rem, 5vw ,3.5rem);
+}
+
+.primary-header {
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.primary-navigation {
+  --gap: clamp(1.5rem, 5vw ,3.5rem);
+  --underline-gap: .5rem;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background: hsl( var(--clr-white) / 0.05);
+  backdrop-filter: blur(1.5rem);
+}
+
+
+.mobile-nav-toggle {
+  display: none;
+
+  }
+  
+.primary-navigation[data-visible="true"] {
+    transform: translateX(0);
+    
+  }
+
+.primary-navigation.underline-indicators > .active{
+    border: 0;
+
+  }
 
 @media (max-width:35rem){
   .primary-navigation {
@@ -290,25 +329,62 @@ border: 0;
     position: fixed;
     z-index: 1000;
     inset: 0 0 0 30%;
-    background: black;
+    background: hsl( var(--clr-white) / .0.05);
     list-style: none;
     padding: min(20rem, 15vh) 2rem;
     margin: 0;
     flex-direction: column;
+    transform: translateX(100%);
+
+    transition: transform .5s ease;
   }
 
-  .primary-navigation.underline-indicators > .active{
+  .mobile-nav-toggle {
+    display: block;
+    position: absolute;
+    z-index: 2000;
+    right: 1rem;
+    top: 2rem;
+    background: transparent;
+    background-image: url(./assets/shared/icon-hamburger.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 1.5rem;
+    aspect-ratio: 1;
     border: 0;
+  }
+
+  .mobile-nav-toggle[aria-expanded="true"] {
+    background-image: url(./assets/shared/icon-close.svg);
+  }
+
+  .mobile-nav-toggle:focus-visible {
+    outline: 5px solid white;
+    outline-offset: 5px;
   }
 
 }
 
-.primary-navigation {
-  --gap: 8rem;
-  --underline-gap: 2rem;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+@media (min-width: 35em) and (max-width: 45em) {
+  .primary-navigation {
+    padding: 2rem;
+
+  }
+
+  .primary-navigation a > span {
+    display: none;
+  }
+}
+@media (min-width: 45em) {
+  .primary-navigation {
+    padding: 2rem;
+    margin-block: 2rem;
+
+  }
+
+  .primary-navigation a > span {
+    display: none;
+  }
 }
 
 .primary-navigation a {
