--- a/index.css
+++ b/index.css
@@ -154,40 +154,6 @@ select {
   max-width: 80rem;
 }
 
-.grid-container {
-  text-align: center;
-  display: grid;
-  place-items: center;
-  padding-inline: 1rem;
-
-}
-
-.grid-container * {
-  max-width: 50ch;
-}
-
-@media (min-width: 45em) {
-  .grid-container {
-      text-align: left;
-      column-gap: var(--container-gap, 2rem);
-      grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(1rem, 1fr);
-  }
-  
-  .grid-container > *:first-child {
-      grid-column: 2;
-  }
-
-  .grid-container > *:last-child {
-      grid-column: 3;
-  }
-  
-  .grid-container--home {
-      padding-bottom: max(6rem, 20vh);
-      align-items: end;
-  }
-}
-
-
 .sr-only {
 position: absolute; 
 width: 1px;
@@ -461,5 +427,99 @@ body {
 @media (min-width: 45rem) {
   .home {
       background-image: url(./assets/home/background-home-desktop.jpg);
+  }
+}
+
+
+/* ------------------- */
+/* Layout         */
+/* ------------------- */
+
+
+.grid-container {
+  text-align: center;
+  display: grid;
+  place-items: center;
+  padding-inline: 1rem;
+  padding-bottom: 2rem;
+}
+
+.grid-container * {
+  max-width: 50ch;
+}
+
+.grid-container--destination {
+  --flow-space: 2rem;
+  grid-template-areas: 
+    'title'
+    'image'
+    'tabs'
+    'content'
+}
+
+.numbered-title {
+  grid-area: title;
+}
+
+.grid-container--destination img {
+  grid-area: image;
+  max-width: 60%;
+}
+
+.grid-container--destination > .tab-list {
+  grid-area: tabs;
+}
+
+.grid-container--destination > .destination-info {
+  grid-area: content;
+}
+
+.destination-meta {
+  flex-direction: column;
+  border-top: 1px solid hsl( var(--clr-white) / .25);
+  padding-top: 2.5rem;
+  margin-top: 2.5rem;
+}
+
+@media (min-width: 35rem) {
+  .numbered-title {
+    justify-self: start;
+    margin-top: 2rem;
+  }
+
+  .destination-meta {
+    flex-direction: row;
+    justify-content: space-evenly;
+    
+  }
+}
+
+@media (min-width: 45em) {
+  .grid-container {
+      text-align: left;
+      column-gap: var(--container-gap, 2rem);
+      grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(1rem, 1fr);
+  }
+  
+  .grid-container > *:first-child {
+      grid-column: 2;
+  }
+
+  .grid-container > *:last-child {
+      grid-column: 3;
+  }
+  
+  .grid-container--home {
+      padding-bottom: max(6rem, 20vh);
+      align-items: end;
+  }
+
+  .grid-container--destination {
+    --flow-space: 2rem;
+    grid-template-areas: 
+      'title'
+      'image'
+      'tabs'
+      'content'
   }
 }
