final website changes with tab functionality

--- a/index.css
+++ b/index.css
@@ -98,7 +98,7 @@ body {
 
 /* make images easier to work with */
 img,
-picutre {
+picture {
   max-width: 100%;
   display: block;
 }
@@ -382,6 +382,7 @@ border: 0;
 
 .tab-list {
   --gap: 2rem;
+
 }
 
 .dot-indicators > * {
@@ -437,7 +438,7 @@ body {
 
 
 .grid-container {
-  text-align: center;
+  
   display: grid;
   place-items: center;
   padding-inline: 1rem;
@@ -461,7 +462,7 @@ body {
   grid-area: title;
 }
 
-.grid-container--destination img {
+.grid-container--destination picture {
   grid-area: image;
   max-width: 60%;
 }
@@ -525,7 +526,7 @@ body {
       '. image content .'
   }
 
-  .grid-container--destination img {
+  .grid-container--destination picture {
     max-width: 80%;
   }
 
@@ -567,5 +568,12 @@ body {
   border-bottom: 1px solid hsl( var(--clr-white) / .25);
 }
 
+@media (min-width: 35rem) {
+
+  .crew-numbered-title {
+    justify-self: start;
+  }
+
+}
 
 
